set(IMAGEPROCESSOR_SRC_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/ImageFilter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FFT.cpp
    CACHE INTERNAL ""
)

set(CU_IMAGEPROCESSOR_SRC_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/cuImageFilter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/cuFFT.cpp
    CACHE INTERNAL ""
)

install(FILES ImageFilter.h DESTINATION include)
